Cherry-picked Lisa's changes.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,19 @@
 
       </div>
     </div>
+    <div class="row">
+      <div class="col-6">
+        <p class="review">Review Review Review Review This was so great! </p>
+      </div>
+      <div class="col-6">
+        <p class="review">Review Review Review Review This was so great! </p>
+      </div>
+    </div>
+    <div class="row">
+      <button type="button" class="btn btn-outline-primary">Log in</button>
+      <button type="button" class="btn btn-outline-primary">Sign up</button>
+    </div>
+    
   </div>
 </div>
 
