added styles, Home page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,34 +2,70 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <link rel="shortcut icon" href="styles/assets/images/carlisle-tacone-122x122.png" type="image/x-icon">
+  <meta name="description" content="">
+  
   <title>Home Page</title>
+  <link rel="stylesheet" href="styles/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="styles/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="styles/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="styles/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="styles/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="styles/assets/theme/css/style.css">
+  <link rel="stylesheet" href="styles/assets/mobirise/css/mbr-additional.css" type="text/css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Voyager</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Reviews</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <script src="styles/assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="styles/assets/popper/popper.min.js"></script>
+  <script src="styles/assets/tether/tether.min.js"></script>
+  <script src="styles/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="styles/assets/dropdown/js/script.min.js"></script>
+  <script src="styles/assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="styles/assets/parallax/jarallax.min.js"></script>
+  <script src="styles/assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="styles/assets/theme/js/script.js"></script>
+  <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+        <div class="menu-logo">
+            <div class="navbar-brand">
+                <span class="navbar-logo">
+                    <a href="#########">
+                         <img src="styles/assets/images/carlisle-tacone-122x122.png" alt="Voyager" title="" style="height: 3.8rem;">
+                    </a>
+                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-1" href="####">Voyager</a></span>
+            </div>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="#######">
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                        Services
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="#####">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
+                        About Us
+                    </a>
+                </li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="######">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span><font face="MobiriseIcons"><span style="font-size: 25.6px;">SignUp</span></font>&nbsp;</a></div>
+        </div>
+    </nav>
+
   {{{body}}}
 </body>
 
