--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,122 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2>Voyager</h2>
-      </div>
-    </div>
-    <div class ="row">
-      <div class="col-6">
-          <div class="review">
-            This has been the best travel experience! I would have never been able to convince any of my friends to join me, but because of Voyager I was able to meet like-minded people to travel with.
-          </div>
-      </div>
-       <div class="col-6">
-         <div class="review">
-            This has been the best travel experience! I would have never been able to convince any of my friends to join me, but because of Voyager I was able to meet like-minded people to travel with.
-          </div>
-      </div>
-    </div>
+section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
-        
-        <button id="login" class="btn btn-primary">Login</button>
-        <button id="signup" class="btn btn-primary">Sign up</button>
-
-
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-6">
-        <p class="review">Review Review Review Review This was so great! </p>
-      </div>
-      <div class="col-6">
-        <p class="review">Review Review Review Review This was so great! </p>
-      </div>
-    </div>
-    <div class="row">
-      <button type="button" class="btn btn-outline-primary">Log in</button>
-      <button type="button" class="btn btn-outline-primary">Sign up</button>
-    </div>
     
-  </div>
-</div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(59, 54, 74);"></div>
+
+    <div class="container align-center">
+        <div class="row justify-content-md-center">
+            <div class="mbr-white col-md-10">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Voyager</h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
+                    Never Travel Alone</h3>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Description</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="#####">LEARN MORE</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="#####">Sign Up</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
+</section>
+
+<section class="cid-qTkAaeaxX5" id="footer1-2">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row content text-white">
+            <div class="col-12 col-md-3">
+                <div class="media-wrap">
+                    <a href="#####">
+                        <img src="styles/assets/images/voyager-logo-192x192.png" alt="#####" title="">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Address
+                </h5>
+                <p class="mbr-text">
+                    1234 Street Name
+                    <br>City, AA 99999
+                </p>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Contacts
+                </h5>
+                <p class="mbr-text">
+                    Email: support@voyager.com
+                    <br>Phone: +1 (0) 000 0000 001
+                    <br>Fax: +1 (0) 000 0000 002
+                </p>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Links
+                </h5>
+                <p class="mbr-text">???????</p>
+            </div>
+        </div>
+        <div class="footer-lower">
+            <div class="media-container-row">
+                <div class="col-sm-12">
+                    <hr>
+                </div>
+            </div>
+            <div class="media-container-row mbr-white">
+                <div class="col-sm-6 copyright">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        © Copyright 2019 Voyager - All Rights Reserved
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-list align-right">
+                        <div class="soc-item">
+                            <a href="https://twitter.com/####" target="_blank">
+                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.facebook.com/pages/######" target="_blank">
+                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.youtube.com/c/######" target="_blank">
+                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://instagram.com/#####" target="_blank">
+                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://plus.google.com/u/0/#######" target="_blank">
+                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.behance.net/#######" target="_blank">
+                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+  
+  
+  
+</body>
