hooked up survey to home page and in htmlroutes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
                     Never Travel Alone</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Description</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="#####">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="#####">Sign Up</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="/survey">Sign Up</a></div>
             </div>
         </div>
     </div>
