--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="######">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="/survey">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span><font face="MobiriseIcons"><span style="font-size: 25.6px;">SignUp</span></font>&nbsp;</a></div>
         </div>
     </nav>
