--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -10,9 +10,9 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Voyager</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Never Travel Alone</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Description</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="#####">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="/survey">Sign Up</a></div>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">In case you need a bit of motivation, a push, a boost, and a travel buddy<br> We are here for you!<br></p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="http://localhost:3000/learnmore">LEARN MORE</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="http://localhost:3000/signin">Sign In</a></div>
             </div>
         </div>
     </div>
@@ -20,6 +20,69 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
         <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
         </a>
+    </div>
+</section>
+
+<section class="carousel slide testimonials-slider cid-rm36zuA7Te" data-interval="false" id="testimonials-slider1-m">
+    
+    
+
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(255, 255, 255);">
+    </div>
+
+    <div class="container text-center">
+        <h2 class="pb-5 mbr-fonts-style display-2">
+            WHAT OUR FANTASTIC USERS SAY
+        </h2>
+
+        <div class="carousel slide" role="listbox" data-pause="true" data-keyboard="false" data-ride="carousel" data-interval="5000">
+            <div class="carousel-inner">
+                
+                
+            <div class="carousel-item">
+                    <div class="user col-md-8">
+                        <div class="user_image">
+                            <img src="assets/images/face3.jpg">
+                        </div>
+                        <div class="user_text pb-3">
+                            <p class="mbr-fonts-style display-7">"Great App to begin your journey. Great hotel, airplane ticket and travel package deals...&nbsp;<br>Gave me chance to meet and travel with new friends..."</p>
+                        </div>
+                        <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">
+                            Alex
+                        </div>
+                        <div class="user_desk mbr-light mbr-fonts-style display-7">
+                            DESIGNER
+                        </div>
+                    </div>
+                </div><div class="carousel-item">
+                    <div class="user col-md-8">
+                        <div class="user_image">
+                            <img src="assets/images/face2.jpg">
+                        </div>
+                        <div class="user_text pb-3">
+                            <p class="mbr-fonts-style display-7">
+                                "Affordable in price with great travel package deals... Hotels were great and in nice location.&nbsp;<br>My new BFFs and I met from this app... Traveling would never be so difficult anymore! Thanks Voyager brought us together!"</p>
+                        </div>
+                        <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">
+                            Linda
+                        </div>
+                        <div class="user_desk mbr-light mbr-fonts-style display-7">
+                            Student</div>
+                    </div>
+                </div></div>
+
+            <div class="carousel-controls">
+                <a class="carousel-control-prev" role="button" data-slide="prev">
+                  <span aria-hidden="true" class="mbri-arrow-prev mbr-iconfont"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                
+                <a class="carousel-control-next" role="button" data-slide="next">
+                  <span aria-hidden="true" class="mbri-arrow-next mbr-iconfont"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -33,8 +96,8 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="#####">
-                        <img src="styles/assets/images/voyager-logo-192x192.png" alt="#####" title="">
+                    <a href="https://voyager.com">
+                        <img src="assets/images/carlisle-tacone-192x192.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -44,8 +107,7 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
                 </h5>
                 <p class="mbr-text">
                     1234 Street Name
-                    <br>City, AA 99999
-                </p>
+                    <br>La Jolla, CA 92117</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -79,44 +141,34 @@ section class="engine"></section><section class="cid-qTkA127IK8 mbr-fullscreen m
                 <div class="col-md-6">
                     <div class="social-list align-right">
                         <div class="soc-item">
-                            <a href="https://twitter.com/####" target="_blank">
-                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://twitter.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.facebook.com/pages/######" target="_blank">
-                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.youtube.com/c/######" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://www.youtube.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://instagram.com/#####" target="_blank">
-                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://instagram.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://plus.google.com/u/0/#######" target="_blank">
-                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://plus.google.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon"></span>
                             </a>
                         </div>
-                        <div class="soc-item">
-                            <a href="https://www.behance.net/#######" target="_blank">
-                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-
-  
-  
-  
-</body>
