fixed the handlebars for survey, main, about us and index. Added routes for 3 of them

--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -39,7 +39,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="../../public/styles/assets/images/mbr-436x326.jpg" alt="Voyager" title="">  
+                      <img src="assets/images/mbr-436x326.jpg" alt="Voyager" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
-                     <img src="../../public/styles/assets/images/mbr-1-436x291.jpg" alt="Voyager" title="">  
+                     <img src="assets/images/mbr-1-436x291.jpg" alt="Voyager" title="">  
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="../../public/styles/assets/images/mbr-1-900x590.jpg" alt="Voyager" title="">
+                        <img src="assets/images/mbr-1-900x590.jpg" alt="Voyager" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">Greece&nbsp;</h4>
@@ -101,7 +101,7 @@
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="../../public/styles/assets/images/mbr-904x452.jpg" alt="Voyager" title="">
+                        <img src="assets/images/mbr-904x452.jpg" alt="Voyager" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
@@ -114,7 +114,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="../../public/styles/assets/images/mbr-1-900x600.jpg" alt="Voyager" title="">
+                        <img src="assets/images/mbr-1-900x600.jpg" alt="Voyager" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
@@ -127,7 +127,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="../../public/styles/assets/images/mbr-2-900x600.jpg" alt="Voyager" title="">
+                        <img src="assets/images/mbr-2-900x600.jpg" alt="Voyager" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
