--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,23 +44,23 @@
                          <img src="assets/images/carlisle-tacone-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-2" href="#top">Voyager</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-2" href="/">Voyager</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="http://localhost:3000/services"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="/services"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="http://localhost:3000/aboutus"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="/aboutus"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
                         
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info-outline display-4" href="localhost:3000/signup"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info-outline display-4" href="/survey"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>
                     <font face="MobiriseIcons"><span style="font-size: 25.6px;">SignUp</span></font>&nbsp;</a></div>
         </div>
     </nav>
