--- a/public/assets/theme/css/style.css
+++ b/public/assets/theme/css/style.css
@@ -1,7 +1,8 @@
-/*!
- * Mobirise v4 theme (https://mobirise.com/)
- * Copyright 2017 Mobirise
- */
+
+.survey {
+ margin-top: 200px;
+}
+
 section {
   background-color: #eeeeee; }
 
