changed country names

--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -26,13 +26,13 @@
         <select class="form-control" id="location">
           <!--dynamically load these from table later-->
           <option></option>
-          <option>North America</option>
-          <option>Asia</option>
-          <option>South America</option>
-          <option>Antartica</option>
+          <option>Japan</option>
+          <option>Italy</option>
+          <option>France</option>
           <option>Australia</option>
-          <option>Africa</option>
-          <option>Europe</option>
+          <option>Kenya</option>
+          <option>Mexico</option>
+          <option>North Korea</option>
         </select>
       </div>
       <div class="form-group">
