added table to result page

--- a/public/assets/theme/css/style.css
+++ b/public/assets/theme/css/style.css
@@ -1,8 +1,7 @@
-
-.survey {
- margin-top: 200px;
-}
-
+/*!
+ * Mobirise v4 theme (https://mobirise.com/)
+ * Copyright 2017 Mobirise
+ */
 section {
   background-color: #eeeeee; }
 
@@ -74,6 +73,10 @@ section {
 
 .mbr-z-index20 {
   z-index: 20; }
+
+  .survey {
+    margin-top: 200px;
+   }
 
 /*! Base colors */
 .mbr-white {
