--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -62,7 +62,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7">The Solos ethos<br>Great experiences are always special when there’s someone to share them with. With Voyager, you'll be joining a sociable group where there will always be somebody with whom to embrace those cherished moments which will become your fond memories. You can dip in and out of activities as you please. Flexibility is the name of the game; let’s face it, it’s your holiday so you should feel free to spend your time entirely as you wish, a further benefit of being with a Solos group.</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><b>The Solos ethos</b><br>Great experiences are always special when there’s someone to share them with. With Voyager, you'll be joining a sociable group where there will always be somebody with whom to embrace those cherished moments which will become your fond memories. You can dip in and out of activities as you please. Flexibility is the name of the game; let’s face it, it’s your holiday so you should feel free to spend your time entirely as you wish, a further benefit of being with a Solos group.</p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
@@ -80,7 +80,7 @@
 
     
     <div class="container">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">Your Solos Tour Leader</h2>
+        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><b>The Solos ethos</b>x</h2>
         <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style display-7">The magic ingredient! Our Tour Leaders accompany every group and understand exactly what you want to get from your trip. Many of them actually started off as Solos customers, just like you.<div><br></div><div>They will be there to lend a helping hand whenever it's needed and will work behind the scenes to ensure that everything runs smoothly, whilst blending in with the group to make sure everybody is happy and enjoying their holiday to the full.</div><div><br></div><div>We choose our Tour Leaders for their personality, their joie de vivre and their ability to deal with all situations; of course, a great sense of humour is also a pre-requisite of the role!</div><div><br></div><div>You will also benefit from the services of an experienced local guide who will join you for elements of your sightseeing experience, and who will be on hand to share their knowledge of the area with you.</div></h3>
 
         <div class="media-container-row container pt-5 mt-2">
@@ -138,3 +138,89 @@
             </div>
         </div>
 </div></section>
+<section class="cid-qTkAaeaxX5" id="footer1-2">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row content text-white">
+            <div class="col-12 col-md-3">
+                <div class="media-wrap">
+                    <a href="https://voyager.com">
+                        <img src="assets/images/carlisle-tacone-192x192.png" alt="" title="">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Address
+                </h5>
+                <p class="mbr-text">
+                    1234 Street Name
+                    <br>La Jolla, CA 92117</p>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Contacts
+                </h5>
+                <p class="mbr-text">
+                    Email: support@voyager.com
+                    <br>Phone: +1 (0) 000 0000 001
+                    <br>Fax: +1 (0) 000 0000 002
+                </p>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
+                    Links
+                </h5>
+                <p class="mbr-text">???????</p>
+            </div>
+        </div>
+        <div class="footer-lower">
+            <div class="media-container-row">
+                <div class="col-sm-12">
+                    <hr>
+                </div>
+            </div>
+            <div class="media-container-row mbr-white">
+                <div class="col-sm-6 copyright">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        © Copyright 2019 Voyager - All Rights Reserved
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-list align-right">
+                        <div class="soc-item">
+                            <a href="https://twitter.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.youtube.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://instagram.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://plus.google.com/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon"></span>
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
