fixed survey fields

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,7 +59,7 @@
                     </a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info-outline display-4" href="/survey"><span class="mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>
-                    <font face="MobiriseIcons"><span style="font-size: 25.6px;">SignUp</span></font>&nbsp;</a></div>
+                    <font face=""><span style="font-size: 25.6px;">SignUp</span></font>&nbsp;</a></div>
         </div>
     </nav>
 </section>
