--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -3,15 +3,15 @@
     <div class="col-sm-6">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="name" id="name" placeholder="Name">
+        <input type="text" class="form-control" id="name" placeholder="Name">
       </div>
       <div class="form-group">
         <label for="emailaddress">Email address</label>
-        <input type="email" class="formcontrol" id="emailaddress" placeholder="Name@example.com">
+        <input type="email" class="form-control" id="emailaddress" placeholder="Name@example.com">
       </div>
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="formcontrol" id="username" placeholder="Username">
+        <input type="text" class="form-control" id="username" placeholder="Username">
       </div>
       <div class="form-group">
         <label for="Password">Password</label>
@@ -19,7 +19,7 @@
       </div>
       <div class="form-group">
         <label for="birthday">Birthday</label>
-        <input type="date" class="formcontrol" id="birthday" placeholder="name@example.com">
+        <input type="date" class="form-control" id="birthday" placeholder="name@example.com">
       </div>
       <div class="form-group">
         <label for="location">Where would you like to travel?</label>
