--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Never Travel Alone</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">In case you need a bit of motivation, a push, a boost, and a travel buddy<br> We are here for you!<br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="/learnmore">LEARN MORE</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="/aboutus">LEARN MORE</a>
                     <a class="btn btn-md btn-white-outline display-4" href="/survey">Sign In</a></div>
             </div>
         </div>
