--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -65,7 +65,7 @@
         <label for="specialrequests">Do you have any special requests?</label>
         <textarea class="form-control" id="specialrequests" rows="3"></textarea>
       </div>
-      <input class="btn btn-primary" type="submit" id="submit" value="Submit">
+      <input class="btn btn-primary btn-form display-4" type="submit" id="submit" value="Submit">
 
       </form>
 
