Got it showing dummy data for demo. Does not pull from datasets

--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -27,21 +27,24 @@
               
               
             <tr> 
+              <!--
+              {{#each result}}
+                <td class="body-item mbr-fonts-style display-7">{{this.name}}</td><td class="body-item mbr-fonts-style display-7">{{this.birthday}}</td><td class="body-item mbr-fonts-style display-7">{{this.location}}</td><td class="body-item mbr-fonts-style display-7">{{this.tourguide}}</td><td class="body-item mbr-fonts-style display-7">{{this.time}}</td></tr><tr></tr>
+              {{/each}}
+               -->  
+              <td class="body-item mbr-fonts-style display-7">Jeanna Schmal</td><td class="body-item mbr-fonts-style display-7">10/15/1991</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">No</td><td class="body-item mbr-fonts-style display-7">March</td></tr><tr> 
                 
                 
                 
                 
-              <td class="body-item mbr-fonts-style display-7">Jeanna Schmal</td><td class="body-item mbr-fonts-style display-7">10/15/1993</td><td class="body-item mbr-fonts-style display-7">Thailand</td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td></tr><tr> 
+              <td class="body-item mbr-fonts-style display-7">John Cena</td><td class="body-item mbr-fonts-style display-7">12/12/1993</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">Yes</td><td class="body-item mbr-fonts-style display-7">March</td></tr><tr> 
                 
                 
                 
                 
-              <td class="body-item mbr-fonts-style display-7">Blank</td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td></tr><tr> 
-                
-                
-                
-                
-              <td class="body-item mbr-fonts-style display-7">Blank</td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td><td class="body-item mbr-fonts-style display-7"></td></tr></tbody>
+              <td class="body-item mbr-fonts-style display-7">Dick Harper</td><td class="body-item mbr-fonts-style display-7">02/16/1983</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">Yes</td><td class="body-item mbr-fonts-style display-7">June</td></tr></tbody>
+          
+          
           </table>
         </div>
         <div class="container table-info-container">
