--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -1,7 +1,7 @@
 <div class="container survey">
   <div class="row">
     <div class="col-sm-6">
-      <form>
+      <form action="/result">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" placeholder="Name">
@@ -72,12 +72,7 @@
 
     </div>
   </div>
-<<<<<<< HEAD
 </div>
-=======
-</div>
-<form>
-
 
   </body>
 
@@ -163,4 +158,3 @@
         </div>
     </div>
 </section>
->>>>>>> a97de278368a5d8fc7c7112c813d5632ebae816b
