Fixed my mistakes

--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -27,12 +27,12 @@
               
               
             <tr> 
-              <!--
+
               {{#each result}}
-                <td class="body-item mbr-fonts-style display-7">{{this.name}}</td><td class="body-item mbr-fonts-style display-7">{{this.birthday}}</td><td class="body-item mbr-fonts-style display-7">{{this.location}}</td><td class="body-item mbr-fonts-style display-7">{{this.tourguide}}</td><td class="body-item mbr-fonts-style display-7">{{this.time}}</td></tr><tr></tr>
+                <td class="body-item mbr-fonts-style display-7">{{this.name}}</td><td class="body-item mbr-fonts-style display-7">{{this.birthday}}</td><td class="body-item mbr-fonts-style display-7">{{this.location}}</td><td class="body-item mbr-fonts-style display-7">{{this.travelguide}}</td><td class="body-item mbr-fonts-style display-7">{{this.dates}}</td></tr><tr></tr>
               {{/each}}
-               -->  
-              <td class="body-item mbr-fonts-style display-7">Jeanna Schmal</td><td class="body-item mbr-fonts-style display-7">10/15/1991</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">No</td><td class="body-item mbr-fonts-style display-7">March</td></tr><tr> 
+
+              <!-- <td class="body-item mbr-fonts-style display-7">Jeanna Schmal</td><td class="body-item mbr-fonts-style display-7">10/15/1991</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">No</td><td class="body-item mbr-fonts-style display-7">March</td></tr><tr> 
                 
                 
                 
@@ -44,7 +44,7 @@
                 
               <td class="body-item mbr-fonts-style display-7">Dick Harper</td><td class="body-item mbr-fonts-style display-7">02/16/1983</td><td class="body-item mbr-fonts-style display-7">France</td><td class="body-item mbr-fonts-style display-7">Yes</td><td class="body-item mbr-fonts-style display-7">June</td></tr></tbody>
           
-          
+              -->
           </table>
         </div>
         <div class="container table-info-container">
@@ -67,3 +67,4 @@
 </section>
 <script src="assets/datatables/jquery.data-tables.min.js"></script>
   <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
+  <script src="jquery-3.3.1.min.js"></script>
